--- a/example-config.yaml
+++ b/example-config.yaml
@@ -1,11 +1,16 @@
 
-poll_interval_seconds: 2
+poll_interval_seconds: 10
 
 projects:
 - name: Transiter
   github_user: jamespfennell
   repo: transiter
   mainline_branch: master
+  steps:
+  - name: Pull Docker image
+    run: ls -lah
+  - name: Recreate the Docker container
+    run: ls ds
 
 - name: realtimerail.nyc
   github_user: jamespfennell
