--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.108"
 serde_yaml = "0.9.27"
 shlex = "1.2.0"
+ctrlc = {version = "3.4.2", features = ["termination"] }
