--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = "1.0.108"
 serde_yaml = "0.9.27"
 shlex = "1.2.0"
 ctrlc = {version = "3.4.2", features = ["termination"] }
+tiny_http = "0.12.0"
