--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ shlex = "1.2.0"
 ctrlc = {version = "3.4.2", features = ["termination"] }
 tiny_http = "0.12.0"
 handlebars = "5.1.1"
-chrono = "0.4.32"
+chrono = { version = "0.4.32", features = ["serde"] }
