--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ ctrlc = {version = "3.4.2", features = ["termination"] }
 tiny_http = "0.12.0"
 handlebars = "5.1.1"
 chrono = { version = "0.4.32", features = ["serde"] }
+clap = { version="4.5.36", features=["derive"] }
